# GolfSim

./: CMakeLists.txt  Doxyfile  README.md  setup.sh
app/: CMakeLists.txt  golf.c
include/: clock.h  errors.h  gl.h  matrix.h  os.h  physics.h  pp.h  round.h  terrain.h  terrain_view.h  text.h  view.h
scripts/: create-course.gs  play-course.gs  raise-terrain.gs  trackman-7.gs  trackman-D.gs  trackman-P.gs
shaders/: axis_fragment.glsl  axis_vertex.glsl  lines_fragment.glsl  lines_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/: CMakeLists.txt  clock.c  console.c  errors.c  gl.c  matrix.c  physics.c  round.c  terrain.c  terrain_view.c  text_field.c  text_input.c  view.c
